@@ -1,36 +1,36 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
-    id 'org.jetbrains.kotlinx.kover' version '0.4.2'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
+    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
+    id 'org.jetbrains.kotlinx.kover' version '0.9.9'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.21'
     id 'org.openstreetmap.josm' version '0.8.2'
 }
 
 group 'org.openstreetmap.josm.plugins.dl.geaddresshelper'
-version '9'
+version '10'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-text:1.10.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.22'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
-    implementation "com.charleskorn.kaml:kaml:0.40.0"
+//    implementation 'org.apache.commons:commons-text:1.15.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.2.21'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
+    implementation "com.charleskorn.kaml:kaml:0.104.0"
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.3.1'
     implementation 'com.github.kittinunf.fuel:fuel-jackson:2.3.1'
     implementation 'junit:junit:4.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.22.2'
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.22")
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.2'
 
-    packIntoJar 'org.apache.commons:commons-text:1.10.0'
-    packIntoJar 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
-    packIntoJar 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
-    packIntoJar 'com.charleskorn.kaml:kaml:0.40.0'
+//    packIntoJar 'org.apache.commons:commons-text:1.15.0'
+    packIntoJar 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
+    packIntoJar 'org.jetbrains.kotlin:kotlin-stdlib:2.1.0'
+    packIntoJar 'com.charleskorn.kaml:kaml:0.104.0'
     packIntoJar 'com.github.kittinunf.fuel:fuel:2.3.1'
     packIntoJar 'com.github.kittinunf.fuel:fuel-coroutines:2.3.1'
     packIntoJar 'com.github.kittinunf.fuel:fuel-jackson:2.3.1'
@@ -73,4 +73,12 @@ josm {
         canLoadAtRuntime = true
         iconPath = "images/flag_georgia.svg"
     }
+
+}
+
+tasks.named('runJosm') {
+    jvmArgs += [
+            "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
+            "-Dfile.encoding=UTF-8"
+    ]
 }
